[tool.poetry]
name = "capella-console-client"
version = "0.16.1"
description = "Python SDK for api.capellaspace.com (task, search, order, download)"
authors = ["Thomas Beyer <thomas.beyer@capellaspace.com>"]
repository = "https://github.com/capellaspace/console-client"
documentation = "https://capella-console-client.readthedocs.io/"
classifiers=[
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    # supported python versions
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Image Processing",
]
keywords = [ "Capella Space", "Earth Observation", "Capella Console", "Synthetic Aperture Radar", "SAR" ]
readme = "README.md"
license = "MIT"

[tool.poetry.scripts]
capella-console-wizard = 'capella_console_client.cli.wizard:main'

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
setuptools = ">=69.0.2,<=78.1.1"
python-dateutil = "^2.8.2"
httpx = "^0.27.0"
retrying = "^1.3.3"
rich = "^13.7.1"
geojson = "^3.0.1"
typer = {version = "^0.6.1", optional = true }
questionary = {version = "^1.10.0", optional = true }
tabulate = {version = "^0.8.10", optional = true }
Sphinx = {version = "^5.1.1", optional = true}
sphinx-rtd-theme = {version = "^1.0.0", optional = true}
sphinx-autobuild = {version = "^2021.3.14", optional = true}
sphinx-copybutton = {version = "^0.5.0", optional = true}
sphinx-autodoc-typehints = {version = "^1.19.2", optional = true}
cloudpathlib = {version = "^0.20.0", extras = ["s3"], optional = true}
botocore = {version = "^1.36.11", extras = ["s3"], optional = true}
keyring = {version = "^25.6.0", extras = ["wizard"], optional = true}

[tool.poetry.extras]
wizard = ["typer", "questionary", "tabulate", "keyring"]
docs = ["Sphinx", "sphinx-rtd-theme", "sphinx-autobuild", "sphinx-copybutton", "sphinx-autodoc-typehints"]
s3 = ["cloudpathlib", "botocore"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-httpx = "^0.30.0"
pytest-html = "^3.1.1"
coveralls = "^3.3.1"
black = "^24.3.0"
mypy = "^1.9.0"
rope = "^1.3.0"

[tool.black]
line-length = 120
target-version = [ "py39", "py310", "py311", "py312", "py313" ]
exclude = "((.eggs | .git | .pytype | .pytest_cache | build | dist))"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
warn_unused_configs = true
ignore_missing_imports = true
no_implicit_optional = false
