[project]
name = "capella-console-client"
version = "0.19.0"
description = "Python SDK for api.capellaspace.com (task, search, order, download)"
authors = [
    {name = "Thomas Beyer", email = "thomas.beyer@capellaspace.com"},
]
readme = "README.md"
license = {text = "MIT"}
keywords = ["Capella", "Earth Observation", "Capella Console", "Synthetic Aperture Radar", "SAR"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Image Processing",
]
requires-python = ">=3.10,<4.0"
dependencies = [
    "python-dateutil>=2.8.2,<3",
    "httpx>=0.27.0,<0.28",
    "tenacity>=9.0.0,<10",
    "rich==13.7.1",
    "geojson>=3.0.1,<4",
]

[project.urls]
Repository = "https://github.com/capellaspace/console-client"
Documentation = "https://capella-console-client.readthedocs.io/"

[project.scripts]
capella-console-wizard = "capella_console_client.cli.wizard:main"

[project.optional-dependencies]
wizard = [
    "click==8.1.7",
    "typer==0.12.5",
    "prompt-toolkit==3.0.43",
    "questionary>=1.10.0,<2",
    "tabulate>=0.8.10,<0.9",
    "keyring>=25.6.0,<26",
]
docs = [
    "Sphinx>=5.1.1,<6",
    "sphinx-rtd-theme>=1.0.0,<2",
    "sphinx-autobuild>=2021.3.14",
    "sphinx-copybutton>=0.5.0,<1",
    "sphinx-autodoc-typehints>=1.19.2,<2",
    "standard-imghdr>=3.13.0,<4",
]
s3 = [
    "cloudpathlib[s3]>=0.23.0,<0.24",
    "botocore>=1.36.11,<2",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0,<8",
    "pytest-cov>=4.1.0,<5",
    "pytest-httpx>=0.30.0,<0.31",
    "coveralls>=3.3.1,<4",
    "ruff>=0.9.0,<1",
    "mypy>=1.9.0,<2",
    "rope>=1.3.0,<2",
    "types-python-dateutil>=2.8.19,<3",
    "types-tabulate>=0.9.0,<0.10",
    "bandit[toml]>=1.9.4,<2",
    "pip-audit>=2.10.0,<3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["capella_console_client"]

[tool.hatch.build.targets.sdist]
exclude = [
    ".gitignore",
    "tests/",
    "docs/",
    "scripts/",
    ".github/",
    ".editorconfig",
    ".readthedocs.yml",
    "Makefile",
    "uv.lock",
]

[tool.ruff]
line-length = 120
target-version = "py310"
exclude = [".git", ".eggs", ".venv", ".pytype", ".pytest_cache", "build", "dist"]

[tool.ruff.lint]
select = ["E", "W", "F", "UP", "I"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
warn_unused_configs = true
ignore_missing_imports = true
no_implicit_optional = false

[tool.bandit]
targets = ["capella_console_client"]
severity = "medium"
confidence = "medium"

[tool.coverage.run]
omit = [
    "*__init__*",
    "*version.py",
    "*hooks.py",
    "*/cli/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "@abc.abstractmethod",
    "\\.\\.\\.",
    "pass",
]
